added 5 day forecast cards and api URLs

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,20 +10,20 @@
 }
 
 #div-row {
-  margin-left: 10px;
-  margin-right: 10px;
-  width: 95%;
+  margin-left: 5px;
+  margin-right: 5px;
+  width: 100%;
 }
 
 #left-column {
-  margin-left: 20px;
+  margin-left: 5px;
 }
 
 .col {
-  margin-left: 20px;
+  margin-left: 10px;
 }
 
-.col-4 {
+.col-3 {
   text-align: center;
   width: 100%;
 }
@@ -32,10 +32,18 @@
   margin-left: 15%;
 }
 
-.col-8 {
+.col-9 {
   text-align: center;
   width: 100%;
 }
 
 h2 {
   padding-bottom: 20px;
+
+  div [class*="flex-fill"] {
+    max-width: 25%;
+  }
+
+#cards-container{
+  display: flex;
+}
